
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-16
2021-10-05 Mikhail Dubrovin
- add SegGeometryEpix10kaV2.py with correct wide pixel size 225um (250um in V1)
- add panel name EPIX10KA:V2 in SegGeometryStore

Tag: V02-00-15
2021-09-22 Daniel Damiani
- add support for Alvium detector
	modified:   include/CalibParsStore.h
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py

Tag: V02-00-14
2021-09-20 Mikhail Dubrovin
- add crash protection in a few methods

Tag: V02-00-13
2021-05-17 Mikhail Dubrovin
app/geometry_image - beside txt data file add option to load data array from *.npy

Tag: V02-00-12
2021-05-03 Mikhail Dubrovin
- GeometryAccess - fix issue with unknown type "unicode" for py3

Tag: V02-00-11
2021-04-30 Mikhail Dubrovin
- add SegGeometryMatrixV2.py - with matrix for cartesian x-y frame, segment type MTRX:V2:512:512:54:54
- SegGeometryMatrixV1.py - cosmetics, move imports to speed-up tests
- SegGeometryStore.py - add MTRX:V2

Tag: V02-00-10
2021-04-28 Mikhail Dubrovin
- GeometryAccess.load_pars_from_str(s) - begin to receive expected str s as unicode
	          at loading constants from h5 file. Fix -> s.encode('utf-8')

Tag: V02-00-09
2021-04-23 Mikhail Dubrovin
- src/UtilsPanelAlias.py - add metadata (exp, run, login) to alias file

Tag: V02-00-08
2021-04-19 Mikhail Dubrovin
- code refactoring for Detector/app/jungfrau_dark_proc
modified: GlobalUtils.py - upgrade methods create_directory
new file: UtilsPanelAlias.py - move to this module a couple of generic methods
	alias_for_id and id_for_alias from Detector/src/UtilsEpix

Tag: V02-00-07
- GeometryAccess - add info messages for debugging
- app/geometry_image - add multiple parameters, add r-phi projection

Tag: V02-00-06
2021-03-18 Daniel Damiani